# Reto_AI-Bank

./: .gitignore  AI Bank - Fifa Mundial (1).pptx  README.md  osfnsdjkfns  package-lock.json  setup_backend.bat
.expo/types/: router.d.ts
Documentacion_AI-Bank/: AI-Bank_mAiles_Presentacion.pptx  PRESENTACION.md  aibank_mailes_erd.puml  create_presentation.js  package-lock.json
agent/: README.md  __init__.py  api.py  main.py  pyproject.toml  tools.py
agent/prompts/: analyst.md  censor.md  orchestrator.md
agent/skills/agente-analista/: SKILL.md
agent/skills/agente-analista/references/: tavily-search-guide.md
agent/skills/agente-censor/: SKILL.md
agent/skills/agente-censor/references/: input-schema.md
backend/: .env.example  package-lock.json  package.json
bd/: BASE.txt
documentation/: API_FRONTEND_GUIDE.md  USER_STORIES.md  dtos.js  swagger.yaml  tests_endpoints.http
frontend/: .gitignore  App.tsx  app.json  export_project_info.bat  package.json  project_info.md
informe/: 01_resumen_ejecutivo.md  02_arquitectura_tecnica.md  03_modelo_ia.md  04_funcionalidades.md  05_base_de_datos.md  06_guia_ejecucion.md  07_propuesta_valor.md  README.md
modelo_segmentacion/: README.MD  api.py  build_input_df.py  label_encoder_categoria.pkl  modelo_categoria_premio.pkl  modelo_metadata.json  reglas_premios.py  requirements.txt
projectAibank/: DEBUG_ACEPTAR_RECHAZAR.md  DEBUG_QUICK_SUMMARY.md  NOTFOUND_ERROR_FIXES.md  app.json  db  eas.json  mundial_seed.sql  package-lock.json  package.json  paises_rows.sql  promt  promt2  stitch.txt
projectAibank/lib/: api.ts  (+7 more)
(+160 files in other folders)
